--- a/index.html
+++ b/index.html
@@ -17,7 +17,59 @@
 	<!-- Performance & Preload -->
 	<link rel="preconnect" href="https://cdnjs.cloudflare.com">
 	<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
-	<link rel="stylesheet" href="style.css">
+	<style>
+	/* ===============================================
+	   GLOBAL STYLES & VARIABLES
+	   =============================================== */
+	:root {
+		--primary-color: #FFB800;
+		--secondary-color: #1a1a1a;
+		--text-dark: #2c3e50;
+		--text-light: #7f8c8d;
+		--white: #ffffff;
+		--light-bg: #f8f9fa;
+		--border-color: #e0e0e0;
+		--success-color: #27ae60;
+		--shadow-sm: 0 2px 8px rgba(0, 0, 0, 0.1);
+		--shadow-md: 0 4px 16px rgba(0, 0, 0, 0.15);
+		--shadow-lg: 0 8px 32px rgba(0, 0, 0, 0.2);
+		--transition: all 0.3s ease;
+	}
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
+	html {
+		scroll-behavior: smooth;
+	}
+	body {
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		color: var(--text-dark);
+		line-height: 1.6;
+		overflow-x: hidden;
+		font-size: 16px;
+	}
+	@media (max-width: 768px) {
+		body {
+			font-size: 15px;
+		}
+	}
+	.container {
+		max-width: 1200px;
+		margin: 0 auto;
+		padding: 0 20px;
+	}
+	img {
+		max-width: 100%;
+		height: auto;
+		display: block;
+	}
+	/* ===============================================
+	   NAVIGATION
+	   =============================================== */
+	/* ...existing code... */
+	</style>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" defer>
 </head>
 <body>
@@ -54,3 +106,58 @@
 		</div>
 		<div class="hero-stats">
 		<!-- ...existing code... -->
+		<script>
+		// ===============================================
+		// NAVIGATION TOGGLE (MOBILE)
+		// ===============================================
+		const navToggle = document.getElementById('navToggle');
+		const navMenu = document.querySelector('.nav-menu');
+		navToggle.addEventListener('click', () => {
+			navMenu.classList.toggle('active');
+			const icon = navToggle.querySelector('i');
+			if (navMenu.classList.contains('active')) {
+				icon.classList.remove('fa-bars');
+				icon.classList.add('fa-times');
+			} else {
+				icon.classList.remove('fa-times');
+				icon.classList.add('fa-bars');
+			}
+		});
+		// Close menu when clicking on a link
+		document.querySelectorAll('.nav-menu a').forEach(link => {
+			link.addEventListener('click', () => {
+				navMenu.classList.remove('active');
+				const icon = navToggle.querySelector('i');
+				icon.classList.remove('fa-times');
+				icon.classList.add('fa-bars');
+			});
+		});
+		// ===============================================
+		// NAVBAR BACKGROUND ON SCROLL
+		// ===============================================
+		const navbar = document.querySelector('.navbar');
+		window.addEventListener('scroll', () => {
+			if (window.scrollY > 100) {
+				navbar.style.background = 'rgba(26, 26, 26, 0.98)';
+				navbar.style.boxShadow = '0 4px 16px rgba(0, 0, 0, 0.2)';
+			} else {
+				navbar.style.background = 'rgba(26, 26, 26, 0.95)';
+				navbar.style.boxShadow = '0 2px 8px rgba(0, 0, 0, 0.1)';
+			}
+		});
+		// ===============================================
+		// GALLERY TABS
+		// ===============================================
+		const tabButtons = document.querySelectorAll('.tab-btn');
+		const tabContents = document.querySelectorAll('.tab-content');
+		tabButtons.forEach(button => {
+			button.addEventListener('click', () => {
+				// Remove active class from all buttons and contents
+				tabButtons.forEach(btn => btn.classList.remove('active'));
+				tabContents.forEach(content => content.classList.remove('active'));
+				// Add active class to clicked button
+				button.classList.add('active');
+				/* ...existing code... */
+			});
+		});
+		</script>
